// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render a lazy image with a height and width 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes=""
    src="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render a lazy image with a height, width and crop it 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes=""
    src="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600&sm=c 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render a lazy image with width only 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes=""
    src="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?w=800 800w,https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?w=600 600w,https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?w=400 400w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render an image with a height, width and crop it to a defined poi 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes=""
    src="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600&sm=c&scaleFit=poi&poi=0.30741794586182,0.64965417250147,0.125,0.18867924528302 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render an image with a height, width and crop it to the default poi 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes=""
    src="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="https://i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600&sm=c&scaleFit=poi&poi={$this.metadata.pointOfInterest.x},{$this.metadata.pointOfInterest.y},{$this.metadata.pointOfInterest.w},{$this.metadata.pointOfInterest.h} 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;
